// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComboBox /> opens dropdown menu when clicked 1`] = `
<div
  className="talixo-combo-box__wrapper"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    aria-label="close menu"
    className="talixo-combo-box__button talixo-combo-box--open"
    data-toggle={true}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <span
      className="talixo-combo-box__value"
    >
      Choose number
    </span>
    <div
      className="talixo-combo-box__arrow"
    >
      <span
        aria-hidden="true"
        className="talixo-icon talixo-combo-box__arrow--down tai tai--material"
      >
        
      </span>
    </div>
  </button>
  <div
    className="talixo-combo-box__options"
  >
    <div
      className="talixo-combo-box__item"
      id="downshift-1-item-0"
      key="1"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      1
    </div>
    <div
      className="talixo-combo-box__item"
      id="downshift-1-item-1"
      key="3"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      3
    </div>
    <div
      className="talixo-combo-box__item"
      id="downshift-1-item-2"
      key="5"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      5
    </div>
  </div>
</div>
`;

exports[`<ComboBox /> renders correctly 1`] = `
<div
  className="talixo-combo-box__wrapper"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="open menu"
    className="talixo-combo-box__button "
    data-toggle={true}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <span
      className="talixo-combo-box__value"
    >
      1
    </span>
    <div
      className="talixo-combo-box__arrow"
    >
      <span
        aria-hidden="true"
        className="talixo-icon talixo-combo-box__arrow--down tai tai--material"
      >
        
      </span>
    </div>
  </button>
</div>
`;
